--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,14 @@
+:root {
+  --c-basic_text_color: #000;
+  --c-accent_text_color: #000;
+  --c-invert_text_color: #FFF;
+  --c-overlay_color: rgba(0,0,0, 0.6);
+  --f-main_font: Raleway;
+  --f-main_font_size: 20px;
+  --f-title_font_size: 40px;
+  --f-auxiliary_font_size: 18px;
+
+}
 *,
 *::before,
 *::after {
@@ -7,7 +18,7 @@
 body {
   min-width: 1100px;
   margin: 0;
-  font-family: Raleway, sans-serif;
+  font-family: var(--f-main_font), sans-serif;
 }
 
 h1,
