--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,244 @@
-/* место для вашего кода */
+.header {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    padding: 92px 50px;
+
+}
+.header__links-list {
+    display: flex;
+    gap: 32px;
+}
+.header__links-list-item {
+    font-size: var(--f-auxiliary_font_size);
+    list-style: circle;
+}
+.header__links-list-item:first-child {
+    list-style: none;
+}
+.header__link {
+    border-bottom: 1px solid;
+    text-decoration: none;
+}
+.header__link_active {
+    border-bottom: none;
+}
+.header__logo {
+    width: 148px;
+    justify-self: center;
+}
+.address {
+    font-size: 18px;
+    max-width: 240px;
+    font-style: normal;
+    line-height: 1.35em;
+}
+.address__link {
+    text-decoration: none;
+    border-bottom: 1px solid;
+}
+.header__address {
+    justify-self: right;
+}
+.cover {
+    position: relative;
+    padding: 165px 50px 50px 50px;
+    background-image: url("../images/cover.jpg");
+    background-size: cover;
+    background-position: 0 -17px;
+    color: var(--c-invert_text_color);
+}
+.overlay {
+    position: absolute;
+    background: var(--c-overlay_color);
+    inset: 0;
+    z-index: 0;
+}
+.cover__title {
+    position: relative;
+    text-transform: uppercase;
+    font-size: 100px;
+    font-weight: 700;
+    letter-spacing: 0.3em;
+    z-index: 10;
+    margin-bottom: 130px;
+}
+.aligned-text {
+    display: block;
+}
+.aligned-text_center {
+    text-align: center;
+    margin-top: 10px;
+    margin-left: -30px;
+}
+.aligned-text_right {
+    text-align: right;
+    margin-right: -30px;
+}
+.letter-spacing-extended {
+    display: inline-block;
+    margin-left: 30px;
+}
+.cover__description {
+    display: flex;
+    gap: 78px;
+    justify-content: right;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+
+}
+.cover__description-text {
+    font-size: 22px;
+    text-transform: uppercase;
+    word-spacing: 18px;
+}
+.bet-button {
+    font-size: 22px;
+    text-transform: uppercase;
+    color: var(--c-invert_text_color);
+    padding: 12px 32px;
+    background: none;
+    border: 1px solid white;
+}
+.lots {
+    margin-top: 130px;
+    padding: 50px;
+}
+.lots__heading {
+    padding-left: 40px;
+    font-size: 40px;
+    text-transform: uppercase;
+    margin-bottom: 28px;
+
+}
+.lots__card-list {
+    display: flex;
+    gap: 25px;
+    flex-wrap: wrap;
+    list-style: none;
+
+}
+.lots__card-list-item {
+    flex-grow: 1;
+    width: 430px;
+    min-height: 450px;
+}
+.card-link {
+    cursor: pointer;
+}
+.card {
+    height: 100%;
+    padding: 50px 40px;
+    position: relative;
+    color: var(--c-invert_text_color);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 20px;
+
+}
+.card_type_film {
+    background-image: url("../images/card-lot-01.jpg");
+    background-size: cover;
+}
+.card_type_book {
+    background-image: url("../images/card-lot-02.jpg");
+    background-size: cover;
+
+
+}
+.card_type_picture {
+    background-image: url("../images/card-lot-03.jpg");
+    background-size: cover;
+}
+.card__title {
+    font-size: 22px;
+    font-weight: 700;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 1;
+    text-decoration: underline;
+    line-height: 1.2em;
+}
+.card__text {
+    position: relative;
+    z-index: 1;
+}
+.lots__look-more-link {
+    display: inline-block;
+    font-size: 20px;
+    text-decoration: none;
+    border-bottom: 1px solid black;
+    margin-left: 40px;
+    padding-top: 30px;
+    cursor: pointer;
+}
+.about {
+    margin: 130px 50px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 10px;
+}
+
+.about__logo {
+    margin: 0 auto;
+    background-color: #000;
+    width: 240px;
+    height: 240px;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+}
+.about__logo-image {
+    width: 60%;
+}
+.about__title {
+    color: var(--c-accent_text_color);
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.about__title h3 {
+    font-size: inherit;
+    font-weight: inherit;
+}
+.about__text {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    font-size: 20px;
+    line-height: 1.15em;
+}
+
+.footer {
+    margin: 190px 50px;
+    display: flex;
+    justify-content: space-between;
+    align-content: start;
+}
+.footer__menu {
+    font-size: 18px;
+    text-align: center;
+}
+.footer__menu-list {
+    list-style: none;
+}
+.footer__menu-link {
+    text-decoration: none;
+    border-bottom: 1px solid;
+}
+.footer__menu-link_active {
+    border: none;
+}
+.footer__social-list {
+    list-style: none;
+    display: flex;
+    gap: 48px;
+}
+.footer__social-list-item {}
+.footer__social-link {}
+.footer__social-icon {}
