--- a/styles/global.css
+++ b/styles/global.css
@@ -19,8 +19,7 @@ body {
   min-width: 1100px;
   max-width: 1440px;
   margin: 0 auto;
-
-  font-family: var(--f-main_font), sans-serif;
+  font-family: var(--f-main_font), Arial, sans-serif;
 }
 
 h1,
