--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@
     background-image: url("../images/cover.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 0 -17px;
+    background-position: center;
     color: var(--c-invert_text_color);
 }
 
@@ -177,17 +177,14 @@
 
 .card_type_film {
     background-image: url("../images/card-lot-01.jpg");
-
 }
 
 .card_type_book {
     background-image: url("../images/card-lot-02.jpg");
-    background-size: cover;
 }
 
 .card_type_picture {
     background-image: url("../images/card-lot-03.jpg");
-    background-size: cover;
 }
 
 .card__title {
